update language for client component and dev env

--- a/src/app/clients/client-stepper/client-family-members-step/client-family-members-step.component.html
+++ b/src/app/clients/client-stepper/client-family-members-step/client-family-members-step.component.html
@@ -1,10 +1,10 @@
 <div class="mat-typography">
 
-    <h3>Family Members</h3>
+    <h3>{{'Client_Component.ClientStepper.RelativeStep.lblRelativeMember'|translate}}</h3>
 
     <div fxLayout="row" fxLayoutAlign="flex-end" class="m-b-20">
       <button mat-raised-button color="primary" (click)="addFamilyMember()">
-        <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;Add
+        <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;{{'Client_Component.ClientStepper.RelativeStep.btnAddRelative'|translate}}
       </button>
     </div>
 
@@ -36,17 +36,17 @@
         </div>
         
         <p>
-          First Name : {{ member.firstName }}<br />
-          Middle Name : {{ member.middleName }}<br />
-          Last Name : {{ member.lastName }}<br />
-          Qualification : {{ member.qualification }}<br />
-          Relationship : {{ member.relationshipId | find:clientTemplate.familyMemberOptions.relationshipIdOptions:'id':'name' }}<br />
-          Age : {{ member.age }}<br />
-          Is Dependent : {{ member.isDependent ? 'Yes' : 'No' }}<br />
-          Marital Status : {{ member.maritalStatusId | find:clientTemplate.familyMemberOptions.maritalStatusIdOptions:'id':'name' }}<br />
-          Gender : {{ member.genderId | find:clientTemplate.familyMemberOptions.genderIdOptions:'id':'name' }}<br />
-          Profession : {{member.professionId | find:clientTemplate.familyMemberOptions.professionIdOptions:'id':'name' }}<br />
-          Date Of Birth : {{member.dateOfBirth | date}}<br />
+          {{'Client_Component.ClientStepper.RelativeStep.lblFirstName'|translate}} : {{ member.firstName }}<br />
+          {{'Client_Component.ClientStepper.RelativeStep.lblMidName'|translate}} : {{ member.middleName }}<br />
+          {{'Client_Component.ClientStepper.RelativeStep.lblLastName'|translate}} : {{ member.lastName }}<br />
+          {{'Client_Component.ClientStepper.RelativeStep.lblQualification'|translate}} : {{ member.qualification }}<br />
+          {{'Client_Component.ClientStepper.RelativeStep.lblRelationship'|translate}} : {{ member.relationshipId | find:clientTemplate.familyMemberOptions.relationshipIdOptions:'id':'name' }}<br />
+          {{'Client_Component.ClientStepper.RelativeStep.lblAge'|translate}} : {{ member.age }}<br />
+          {{'Client_Component.ClientStepper.RelativeStep.lblDependent'|translate}} : {{ member.isDependent ? 'Yes' : 'No' }}<br />
+          {{'Client_Component.ClientStepper.RelativeStep.lblMaritalStatus'|translate}} : {{ member.maritalStatusId | find:clientTemplate.familyMemberOptions.maritalStatusIdOptions:'id':'name' }}<br />
+          {{'Client_Component.ClientStepper.RelativeStep.lblGender'|translate}} : {{ member.genderId | find:clientTemplate.familyMemberOptions.genderIdOptions:'id':'name' }}<br />
+          {{'Client_Component.ClientStepper.RelativeStep.lblProfession'|translate}} : {{member.professionId | find:clientTemplate.familyMemberOptions.professionIdOptions:'id':'name' }}<br />
+          {{'Client_Component.ClientStepper.RelativeStep.lblDOB'|translate}} : {{member.dateOfBirth | date}}<br />
         </p>
 
       </mat-expansion-panel>
@@ -56,10 +56,10 @@
     <div fxLayout="row" class="margin-t" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
       <button mat-raised-button matStepperPrevious>
         <fa-icon icon="arrow-left"></fa-icon>&nbsp;&nbsp;
-        Previous
+        {{'Client_Component.ClientStepper.buttonPrevious'|translate}}
       </button>
       <button mat-raised-button matStepperNext>
-        Next&nbsp;&nbsp;
+        {{'Client_Component.ClientStepper.buttonNext'|translate}}&nbsp;&nbsp;
         <fa-icon icon="arrow-right"></fa-icon>
       </button>
     </div>
