--- a/src/app/clients/clients-view/clients-view.component.html
+++ b/src/app/clients/clients-view/clients-view.component.html
@@ -10,18 +10,18 @@
             [src]="(clientImage)?clientImage:'assets/images/user_placeholder.png'">
         </div>
         <div fxLayoutAlign="center center" class="m-b-5">
-          <button class="client-image-button" mat-raised-button (click)="doAction('Upload Image')" matTooltip="Upload Image" *mifosxHasPermission="'CREATE_CLIENTIMAGE'">
+          <button class="client-image-button" mat-raised-button (click)="doAction('Upload Image')" [matTooltip]="'Client_Component.ViewClient.tipUploadImage'|translate" *mifosxHasPermission="'CREATE_CLIENTIMAGE'">
             <i class="fa fa-upload"></i>
           </button>
-          <button class="client-image-button" mat-raised-button (click)="doAction('Capture Image')" matTooltip="Capture Image" *mifosxHasPermission="'CREATE_CLIENTIMAGE'">
+          <button class="client-image-button" mat-raised-button (click)="doAction('Capture Image')" [matTooltip]="'Client_Component.ViewClient.tipCaptureImage'|translate" *mifosxHasPermission="'CREATE_CLIENTIMAGE'">
             <i class="fa fa-camera"></i>
           </button>
-          <button class="client-image-button" mat-raised-button (click)="doAction('Delete Image')" matTooltip="Delete Image" *mifosxHasPermission="'DELETE_CLIENTIMAGE'">
+          <button class="client-image-button" mat-raised-button (click)="doAction('Delete Image')" [matTooltip]="'Client_Component.ViewClient.tipDeleteImage'|translate" *mifosxHasPermission="'DELETE_CLIENTIMAGE'">
             <i class="fa fa-trash"></i>
           </button>
           <br>
         </div>
-        <p (click)="doAction('View Signature')" class="signature">View Signature</p>
+        <p (click)="doAction('View Signature')" class="signature">{{'Client_Component.ViewClient.lblViewSignature'|translate}}</p>
       </div>
 
       <div class="mat-typography client-card-title">
@@ -29,21 +29,20 @@
         <mat-card-title>
           <h3>
             <i class="fa fa-stop" [ngClass]="clientViewData.status.code|statusLookup" [matTooltip]="clientViewData.status.value"></i>
-            Client Name : {{clientViewData.displayName}}
+            {{'Client_Component.ViewClient.lblClientName'|translate}} : {{clientViewData.displayName}}
           </h3>
         </mat-card-title>
 
         <mat-card-subtitle>
           <p>
-            Client #:{{clientViewData.accountNo}} | External
-            Id: {{clientViewData.externalId}} | Staff:{{clientViewData.staffName || 'Unassigned'}}<br />
-            Activation Date :
-            {{(clientViewData.activationDate)?(clientViewData.activationDate|date) :'Not Activated'}}<br />
-            Member Of : 
+            {{'Client_Component.ViewClient.lblCifNo'|translate}}:{{clientViewData.accountNo}} | {{'Client_Component.ViewClient.lblExternalID'|translate}}: {{clientViewData.externalId}} | Staff:{{clientViewData.staffName || 'Unassigned'}}<br />
+            {{'Client_Component.ViewClient.lblActivationDate'|translate}} :
+            {{(clientViewData.activationDate)?(clientViewData.activationDate|date) :('Client_Component.ViewClient.lblNotActivated'|translate)}}<br />
+            {{'Client_Component.ViewClient.lblMemberOf'|translate}} : 
             <span *ngFor="let group of clientViewData.groups">
               <a>{{group.name}}</a>&nbsp;
             </span>
-            <span *ngIf="!clientViewData.groups">Unassigned</span>
+            <span *ngIf="!clientViewData.groups">{{'Client_Component.ViewClient.lblUnassigned'|translate}}</span>
             <br/>
           </p>
         </mat-card-subtitle>
@@ -56,57 +55,57 @@
 
       <span *mifosxHasPermission="'UPDATE_CLIENT'">
         <button mat-raised-button [routerLink]="['edit']">
-          <i class="fa fa-edit"></i>Edit</button>
+          <i class="fa fa-edit"></i>{{'Client_Component.ViewClient.btnEdit'|translate}}</button>
       </span>
       
       <button mat-raised-button [matMenuTriggerFor]="Applications">
-        <i class="fa fa-file"></i>Applications</button>
+        <i class="fa fa-file"></i>{{'Client_Component.ViewClient.btnApplication'|translate}}</button>
       <mat-menu #Applications="matMenu">
-        <button mat-menu-item [routerLink]="['loans-accounts', 'create']">New Loan Account</button>
-        <button mat-menu-item [routerLink]="['savings-accounts', 'create']">New Savings Account</button>
-        <button mat-menu-item *mifosxHasPermission="'CREATE_SHAREACCOUNT'" [routerLink]="['shares-accounts', 'create']">New Share Account</button>
-        <button mat-menu-item *mifosxHasPermission="'CREATE_RECURRINGDEPOSITACCOUNT'" [routerLink]="['recurringdeposits', 'create-recurring-deposits-account']">New Recurring Deposit Account</button>
-        <button mat-menu-item *mifosxHasPermission="'CREATE_FIXEDDEPOSITACCOUNT'" [routerLink]="['fixed-deposits-accounts', 'create']">New Fixed Deposits Account</button>
+        <button mat-menu-item [routerLink]="['loans-accounts', 'create']">{{'Client_Component.ViewClient.btnNewLoan'|translate}}</button>
+        <button mat-menu-item [routerLink]="['savings-accounts', 'create']">{{'Client_Component.ViewClient.btnNewSaving'|translate}}</button>
+        <button mat-menu-item *mifosxHasPermission="'CREATE_SHAREACCOUNT'" [routerLink]="['shares-accounts', 'create']">{{'Client_Component.ViewClient.btnNewShareAccount'|translate}}</button>
+        <button mat-menu-item *mifosxHasPermission="'CREATE_RECURRINGDEPOSITACCOUNT'" [routerLink]="['recurringdeposits', 'create-recurring-deposits-account']">{{'Client_Component.ViewClient.btnNewRecurringDeposit'|translate}}</button>
+        <button mat-menu-item *mifosxHasPermission="'CREATE_FIXEDDEPOSITACCOUNT'" [routerLink]="['fixed-deposits-accounts', 'create']">{{'Client_Component.ViewClient.btnNewFixedDeposit'|translate}}</button>
       </mat-menu>
 
       <button mat-raised-button [matMenuTriggerFor]="Actions">
-        <i class="fa fa-tasks"></i>Actions</button>
+        <i class="fa fa-tasks"></i>{{'Client_Component.ViewClient.btnAction'|translate}}</button>
       <mat-menu #Actions="matMenu">
-        <button mat-menu-item (click)="doAction('Close')">Close</button>
-        <button mat-menu-item (click)="doAction('Transfer Client')">Transfer Client</button>
-        <span *ngIf="clientViewData.status.value === 'Pending'"><button mat-menu-item (click)="doAction('Activate')">Activate</button></span>
-        <span *ngIf="clientViewData.status.value === 'Pending'"><button mat-menu-item (click)="doAction('Withdraw')">Withdraw</button></span>
-        <span *ngIf="clientViewData.status.value === 'Pending'"><button mat-menu-item (click)="doAction('Reject')">Reject</button></span>
-        <span *ngIf="clientViewData.status.value === 'Pending'"><button mat-menu-item *mifosxHasPermission="'DELETE_CLIENT'" (click)="doAction('Delete')">Delete</button></span>
-        <span *ngIf="clientViewData.status.value === 'Closed'"><button mat-menu-item (click)="doAction('Reactivate')">Reactivate</button></span>
-        <span *ngIf="clientViewData.status.value === 'Rejected'"><button mat-menu-item (click)="doAction('Undo Rejection')">Undo Rejection</button></span>
-        <span *ngIf="clientViewData.status.value === 'Transfer in progress'"><button mat-menu-item (click)="doAction('Undo Transfer')">Undo Transfer</button></span>
-        <span *ngIf="clientViewData.status.value === 'Transfer in progress'"><button mat-menu-item (click)="doAction('Accept Transfer')">Accept Transfer</button></span>
-        <span *ngIf="clientViewData.status.value === 'Transfer in progress'"><button mat-menu-item (click)="doAction('Reject Transfer')">Reject transfer</button></span>
+        <button mat-menu-item (click)="doAction('Close')">{{'Client_Component.ViewClient.btnClose'|translate}}</button>
+        <button mat-menu-item (click)="doAction('Transfer Client')">{{'Client_Component.ViewClient.btnTransferClient'|translate}}</button>
+        <span *ngIf="clientViewData.status.value === 'Pending'"><button mat-menu-item (click)="doAction('Activate')">{{'Client_Component.ViewClient.btnActivate'|translate}}</button></span>
+        <span *ngIf="clientViewData.status.value === 'Pending'"><button mat-menu-item (click)="doAction('Withdraw')">{{'Client_Component.ViewClient.btnWithdraw'|translate}}</button></span>
+        <span *ngIf="clientViewData.status.value === 'Pending'"><button mat-menu-item (click)="doAction('Reject')">{{'Client_Component.ViewClient.btnReject'|translate}}</button></span>
+        <span *ngIf="clientViewData.status.value === 'Pending'"><button mat-menu-item *mifosxHasPermission="'DELETE_CLIENT'" (click)="doAction('Delete')">{{'Client_Component.ViewClient.btnDelete'|translate}}</button></span>
+        <span *ngIf="clientViewData.status.value === 'Closed'"><button mat-menu-item (click)="doAction('Reactivate')">{{'Client_Component.ViewClient.btnReactivate'|translate}}</button></span>
+        <span *ngIf="clientViewData.status.value === 'Rejected'"><button mat-menu-item (click)="doAction('Undo Rejection')">{{'Client_Component.ViewClient.btnUndoReject'|translate}}</button></span>
+        <span *ngIf="clientViewData.status.value === 'Transfer in progress'"><button mat-menu-item (click)="doAction('Undo Transfer')">{{'Client_Component.ViewClient.btnUndoTransfer'|translate}}r</button></span>
+        <span *ngIf="clientViewData.status.value === 'Transfer in progress'"><button mat-menu-item (click)="doAction('Accept Transfer')">{{'Client_Component.ViewClient.btnAcceptTransfer'|translate}}</button></span>
+        <span *ngIf="clientViewData.status.value === 'Transfer in progress'"><button mat-menu-item (click)="doAction('Reject Transfer')">{{'Client_Component.ViewClient.btnRejectTransfer'|translate}}</button></span>
       </mat-menu>
       
       <span *ngIf="!clientViewData.staffId">
         <button mat-raised-button (click)="doAction('Assign Staff')">
-          <i class="fa fa-user"></i>Assign Staff</button>
+          <i class="fa fa-user"></i>{{'Client_Component.ViewClient.btnAssignStaff'|translate}}</button>
       </span>
       <span *ngIf="clientViewData.staffId">
         <button mat-raised-button *mifosxHasPermission="'UNASSIGNSTAFF_CLIENT'" (click)="doAction('Unassign Staff')">
-          <i class="fa fa-user"></i>Unassign Staff</button>
+          <i class="fa fa-user"></i>{{'Client_Component.ViewClient.btnUnAssignStaff'|translate}}</button>
       </span>
 
-      <button mat-raised-button [matMenuTriggerFor]="More">More</button>
+      <button mat-raised-button [matMenuTriggerFor]="More">{{'Client_Component.ViewClient.btnMoreAction'|translate}}</button>
       <mat-menu #More="matMenu">
-        <button mat-menu-item (click)="doAction('Add Charge')" *mifosxHasPermission="'CREATE_CLIENTCHARGE'"> Add Charge </button>
+        <button mat-menu-item (click)="doAction('Add Charge')" *mifosxHasPermission="'CREATE_CLIENTCHARGE'"> {{'Client_Component.ViewClient.btnAddCharge'|translate}} </button>
         <button mat-menu-item (click)="doAction('Survey')">Survey</button>
-        <button mat-menu-item (click)="doAction('Update Default Savings')" *mifosxHasPermission="'UPDATESAVINGSACCOUNT_CLIENT'"> Update Default Savings </button>
-        <button mat-menu-item (click)="doAction('Upload Signature')" *mifosxHasPermission="'CREATE_CLIENTIMAGE'"> Upload Signature </button>
-        <button mat-menu-item (click)="doAction('Delete Signature')" *mifosxHasPermission="'DELETE_CLIENTIMAGE'"> Delete Signature </button>
-        <button mat-menu-item (click)="doAction('Client Screen Reports')"> Client Screen Reports </button>
-        <button mat-menu-item (click)="doAction('Create Standing Instructions')" *mifosxHasPermission="'READ_STANDINGINSTRUCTION'">Create Standing Instructions</button>
+        <button mat-menu-item (click)="doAction('Update Default Savings')" *mifosxHasPermission="'UPDATESAVINGSACCOUNT_CLIENT'"> {{'Client_Component.ViewClient.btnUpdateDefaultSaving'|translate}} </button>
+        <button mat-menu-item (click)="doAction('Upload Signature')" *mifosxHasPermission="'CREATE_CLIENTIMAGE'"> {{'Client_Component.ViewClient.btnUploadSignature'|translate}} </button>
+        <button mat-menu-item (click)="doAction('Delete Signature')" *mifosxHasPermission="'DELETE_CLIENTIMAGE'"> {{'Client_Component.ViewClient.btnDeleteSignature'|translate}} </button>
+        <button mat-menu-item (click)="doAction('Client Screen Reports')"> {{'Client_Component.ViewClient.btnClientReport'|translate}}  </button>
+        <button mat-menu-item (click)="doAction('Create Standing Instructions')" *mifosxHasPermission="'READ_STANDINGINSTRUCTION'">{{'Client_Component.ViewClient.btnCreateStandingIns'|translate}}</button>
         <span *ngIf="clientViewData.status.value!='Transfer on hold'">
-          <button mat-menu-item (click)="doAction('View Standing Instructions')" *mifosxHasPermission="'CREATE_STANDINGINSTRUCTION'">View Standing Instructions</button>
+          <button mat-menu-item (click)="doAction('View Standing Instructions')" *mifosxHasPermission="'CREATE_STANDINGINSTRUCTION'">{{'Client_Component.ViewClient.btnViewStandingIns'|translate}}</button>
         </span>
-        <button mat-menu-item (click)="doAction('Create Self Service User')">Create Self Service User</button>
+        <button mat-menu-item (click)="doAction('Create Self Service User')">{{'Client_Component.ViewClient.btnCreateSelfService'|translate}}</button>
       </mat-menu>
 
     </mat-card-actions>
@@ -117,34 +116,34 @@
     <nav mat-tab-nav-bar class="navigation-tabs">
       <a mat-tab-link [routerLink]="['./general']" routerLinkActive #general="routerLinkActive"
         [active]="general.isActive">
-        General
+        {{'Client_Component.ViewClient.lblGeneral'|translate}}
       </a>
       <a mat-tab-link [routerLink]="['./address']" routerLinkActive #address="routerLinkActive"
         [active]="address.isActive" *ngIf="clientTemplateData.isAddressEnabled">
-        Address
+        {{'Client_Component.ViewClient.lblAddress'|translate}}
       </a>
       <a mat-tab-link [routerLink]="['./family-members']" routerLinkActive #familyMembers="routerLinkActive"
         [active]="familyMembers.isActive">
-        Family Members
+        {{'Client_Component.ViewClient.lblFamilyMember'|translate}}
       </a>
       <a mat-tab-link [routerLink]="['./identities']" routerLinkActive #identities="routerLinkActive"
         [active]="identities.isActive" *mifosxHasPermission="'READ_CLIENTIDENTIFIER'">
-        Identities
+        {{'Client_Component.ViewClient.lblIdentity'|translate}}
       </a>
       <a mat-tab-link [routerLink]="['./documents']" routerLinkActive #documents="routerLinkActive"
         [active]="documents.isActive" *mifosxHasPermission="'READ_DOCUMENT'">
-        Documents
-      </a>
-      <a mat-tab-link [routerLink]="['./notes']" routerLinkActive #notes="routerLinkActive"
-        [active]="notes.isActive" *mifosxHasPermission="'READ_CLIENTNOTE'">
-        Notes
-      </a>
+        {{'Client_Component.ViewClient.lblDocument'|translate}}
+      </a>      
       <ng-container *ngFor="let clientDatatable of clientDatatables">
         <a mat-tab-link [routerLink]="['./datatables',clientDatatable.registeredTableName]"
           routerLinkActive #datatable="routerLinkActive" [active]="datatable.isActive" *mifosxHasPermission="'READ_' + clientDatatable.registeredTableName">
-          {{clientDatatable.registeredTableName}}
+          {{(clientDatatable.registeredTableName.indexOf('Ext')>=0) ?  ('Client_Component.ViewClient.lblExtendInfo'|translate): (clientDatatable.registeredTableName)}}
         </a>
       </ng-container>
+      <a mat-tab-link [routerLink]="['./notes']" routerLinkActive #notes="routerLinkActive"
+        [active]="notes.isActive" *mifosxHasPermission="'READ_CLIENTNOTE'">
+        {{'Client_Component.ViewClient.lblNote'|translate}}
+      </a>
     </nav>
 
     <router-outlet></router-outlet>
