--- a/src/app/clients/client-stepper/client-family-members-step/client-family-member-dialog/client-family-member-dialog.component.html
+++ b/src/app/clients/client-stepper/client-family-members-step/client-family-member-dialog/client-family-member-dialog.component.html
@@ -5,67 +5,77 @@
   <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutAlign="start center" fxLayoutGap="2%">
 
     <mat-form-field fxFlex="48%">
-      <mat-label>First Name</mat-label>
+      <mat-label>{{'Client_Component.ClientStepper.FamilyMember.Dialog.labelInputFirstName'|translate}}</mat-label>
       <input formControlName="firstName" required matInput />
-      <mat-error *ngIf="familyMemberForm.controls.firstName.hasError('required')">
-        First Name is <strong>required</strong>
+      <mat-error *ngIf="familyMemberForm.controls.firstName.hasError('required')"
+                 [innerHTML]="'Client_Component.ClientStepper.FamilyMember.Dialog.labelInputFirstNameMsg' |translate">
       </mat-error>
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Middle Name</mat-label>
+      <mat-label>{{'Client_Component.ClientStepper.FamilyMember.Dialog.labelMiddleName'|translate}}</mat-label>
       <input formControlName="middleName" matInput />
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Last Name</mat-label>
+      <mat-label>{{'Client_Component.ClientStepper.FamilyMember.Dialog.labelLastName'|translate}}</mat-label>
       <input formControlName="lastName" required matInput />
-      <mat-error *ngIf="familyMemberForm.controls.lastName.hasError('required')">
-        Last Name is <strong>required</strong>
+      <mat-error *ngIf="familyMemberForm.controls.lastName.hasError('required')"
+        [innerHTML]="'Client_Component.ClientStepper.FamilyMember.Dialog.labelLastNameMsg'|translate"
+      >
       </mat-error>
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Qualification</mat-label>
+      <mat-label>{{'Client_Component.ClientStepper.FamilyMember.Dialog.labelQualification'|translate}}</mat-label>
       <input formControlName="qualification" matInput />
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Age</mat-label>
-      <input type="number" formControlName="age" matInput />
-      <mat-error *ngIf="familyMemberForm.controls.age.hasError('required')">
-        Age is <strong>required</strong>
-      </mat-error>
-    </mat-form-field>
-
-    <mat-checkbox formControlName="isDependent" labelPosition="before" fxFlex="48%">Is Dependent?</mat-checkbox>
-
-    <mat-form-field fxFlex="48%">
-      <mat-label>Relationship</mat-label>
-      <mat-select formControlName="relationshipId" required>
-        <mat-option *ngFor="let relation of data.options.relationshipIdOptions" [value]="relation.id">
-          {{ relation.name  }}
-        </mat-option>
-      </mat-select>
-      <mat-error *ngIf="familyMemberForm.controls.relationshipId.hasError('required')">
-        Relationship is <strong>required</strong>
-      </mat-error>
-    </mat-form-field>
-
-    <mat-form-field fxFlex="48%">
-      <mat-label>Gender</mat-label>
+      <mat-label>{{'Client_Component.ClientStepper.FamilyMember.Dialog.labelSelectGender'|translate}}</mat-label>
       <mat-select formControlName="genderId">
         <mat-option *ngFor="let gender of data.options.genderIdOptions" [value]="gender.id">
           {{ gender.name }}
         </mat-option>
       </mat-select>
-      <mat-error *ngIf="familyMemberForm.controls.genderId.hasError('required')">
-        Gender is <strong>required</strong>
+      <mat-error *ngIf="familyMemberForm.controls.genderId.hasError('required')"
+                 [innerHTML]="'Client_Component.ClientStepper.FamilyMember.Dialog.labelSelectGenderMsg'|translate"
+      >
       </mat-error>
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Profession</mat-label>
+      <mat-label>{{'Client_Component.ClientStepper.FamilyMember.Dialog.labelAge'|translate}}</mat-label>
+      <input type="number" formControlName="age" matInput />
+      <mat-error *ngIf="familyMemberForm.controls.age.hasError('required')"
+      [innerHTML]="'Client_Component.ClientStepper.FamilyMember.Dialog.labelAgeMsg'|translate"
+      >
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field fxFlex="48%">
+      <mat-label>{{'Client_Component.ClientStepper.FamilyMember.Dialog.labelMobileNumber'|translate}}</mat-label>
+      <input formControlName="mobileNumber" matInput />
+    </mat-form-field>
+
+    <mat-checkbox formControlName="isDependent" labelPosition="before" fxFlex="48%">{{'Client_Component.ClientStepper.FamilyMember.Dialog.checkBoxDependent'|translate}}</mat-checkbox>
+
+    <mat-form-field fxFlex="48%">
+      <mat-label>{{'Client_Component.ClientStepper.FamilyMember.Dialog.labelSelectRelationship'|translate}}</mat-label>
+      <mat-select formControlName="relationshipId" required>
+        <mat-option *ngFor="let relation of data.options.relationshipIdOptions" [value]="relation.id">
+          {{ relation.name  }}
+        </mat-option>
+      </mat-select>
+      <mat-error *ngIf="familyMemberForm.controls.relationshipId.hasError('required')"
+      [innerHTML]="'Client_Component.ClientStepper.FamilyMember.Dialog.labelSelectRelationshipMsg'|translate"
+      >
+      </mat-error>
+    </mat-form-field>
+
+
+    <mat-form-field fxFlex="48%">
+      <mat-label>{{'Client_Component.ClientStepper.FamilyMember.Dialog.labelSelectProfession'|translate}}</mat-label>
       <mat-select formControlName="professionId">
         <mat-option *ngFor="let profession of data.options.professionIdOptions" [value]="profession.id">
           {{ profession.name }}
@@ -74,7 +84,7 @@
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Marital Status</mat-label>
+      <mat-label>{{'Client_Component.ClientStepper.FamilyMember.Dialog.labelSelectMaritalStatus'|translate}}</mat-label>
       <mat-select formControlName="maritalStatusId">
         <mat-option *ngFor="let maritalStatus of data.options.maritalStatusIdOptions"
           [value]="maritalStatus.id">
@@ -84,21 +94,22 @@
     </mat-form-field>
 
 
-    <mat-form-field fxFlex="98%">
-      <mat-label>Date Of Birth</mat-label>
+    <mat-form-field fxFlex="48%">
+      <mat-label>{{'Client_Component.ClientStepper.FamilyMember.Dialog.labelDateOfBirth'|translate}}</mat-label>
       <input formControlName="dateOfBirth" matInput [min]="minDate" [max]="maxDate" [matDatepicker]="dueDatePicker">
       <mat-datepicker-toggle matSuffix [for]="dueDatePicker"></mat-datepicker-toggle>
       <mat-datepicker #dueDatePicker></mat-datepicker>
-      <mat-error *ngIf="familyMemberForm.controls.dateOfBirth.hasError('required')">
-        Date of birth is <strong>required</strong>
+      <mat-error *ngIf="familyMemberForm.controls.dateOfBirth.hasError('required')"
+      [innerHTML]="'Client_Component.ClientStepper.FamilyMember.Dialog.labelDateOfBirthMsg'|translate"
+      >
       </mat-error>
     </mat-form-field>
 
   </div>
 
   <mat-dialog-actions align="center">
-    <button mat-raised-button mat-dialog-close>Cancel</button>
-    <button mat-raised-button color="primary" [disabled]="!familyMemberForm.valid" [mat-dialog-close]="{ member: familyMember }">Confirm</button>
+    <button mat-raised-button mat-dialog-close>{{'Client_Component.ClientStepper.FamilyMember.Dialog.buttonCancel'|translate}}</button>
+    <button mat-raised-button color="primary" [disabled]="!familyMemberForm.valid" [mat-dialog-close]="{ member: familyMember }">{{'Client_Component.ClientStepper.FamilyMember.Dialog.buttonConfirm'|translate}}</button>
   </mat-dialog-actions>
 
 </form>
