--- a/src/app/clients/client-stepper/client-family-members-step/client-family-members-step.component.html
+++ b/src/app/clients/client-stepper/client-family-members-step/client-family-members-step.component.html
@@ -1,10 +1,10 @@
 <div class="mat-typography">
 
-    <h3>Family Members</h3>
+    <h3>{{'Client_Component.ClientStepper.FamilyMember.labelTitle'|translate}}</h3>
 
     <div fxLayout="row" fxLayoutAlign="flex-end" class="m-b-20">
       <button mat-raised-button color="primary" (click)="addFamilyMember()">
-        <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;Add
+        <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;{{'Client_Component.ClientStepper.FamilyMember.buttonAdd'|translate}}
       </button>
     </div>
 
@@ -34,19 +34,19 @@
             <fa-icon icon="trash"></fa-icon>
           </button>
         </div>
-        
+
         <p>
-          First Name : {{ member.firstName }}<br />
-          Middle Name : {{ member.middleName }}<br />
-          Last Name : {{ member.lastName }}<br />
-          Qualification : {{ member.qualification }}<br />
-          Relationship : {{ member.relationshipId | find:clientTemplate.familyMemberOptions.relationshipIdOptions:'id':'name' }}<br />
-          Age : {{ member.age }}<br />
-          Is Dependent : {{ member.isDependent ? 'Yes' : 'No' }}<br />
-          Marital Status : {{ member.maritalStatusId | find:clientTemplate.familyMemberOptions.maritalStatusIdOptions:'id':'name' }}<br />
-          Gender : {{ member.genderId | find:clientTemplate.familyMemberOptions.genderIdOptions:'id':'name' }}<br />
-          Profession : {{member.professionId | find:clientTemplate.familyMemberOptions.professionIdOptions:'id':'name' }}<br />
-          Date Of Birth : {{member.dateOfBirth | date}}<br />
+          {{'Client_Component.ClientStepper.FamilyMember.labelFirstName'|translate}} : {{ member.firstName }}<br />
+          {{'Client_Component.ClientStepper.FamilyMember.labelMiddleName'|translate}} : {{ member.middleName }}<br />
+          {{'Client_Component.ClientStepper.FamilyMember.labelLastName'|translate}} : {{ member.lastName }}<br />
+          {{'Client_Component.ClientStepper.FamilyMember.labelQualification'|translate}} : {{ member.qualification }}<br />
+          {{'Client_Component.ClientStepper.FamilyMember.labelRelationship'|translate}} : {{ member.relationshipId | find:clientTemplate.familyMemberOptions.relationshipIdOptions:'id':'name' }}<br />
+          {{'Client_Component.ClientStepper.FamilyMember.labelAge'|translate}} : {{ member.age }}<br />
+          {{'Client_Component.ClientStepper.FamilyMember.labelDependent'|translate}} : {{ member.isDependent ? 'Yes' : 'No' }}<br />
+          {{'Client_Component.ClientStepper.FamilyMember.labelMaritalStatus'|translate}} : {{ member.maritalStatusId | find:clientTemplate.familyMemberOptions.maritalStatusIdOptions:'id':'name' }}<br />
+          {{'Client_Component.ClientStepper.FamilyMember.labelGender'|translate}} : {{ member.genderId | find:clientTemplate.familyMemberOptions.genderIdOptions:'id':'name' }}<br />
+          {{'Client_Component.ClientStepper.FamilyMember.labelProfession'|translate}} : {{member.professionId | find:clientTemplate.familyMemberOptions.professionIdOptions:'id':'name' }}<br />
+          {{'Client_Component.ClientStepper.FamilyMember.labelDateOfBirth'|translate}}: {{member.dateOfBirth | date}}<br />
         </p>
 
       </mat-expansion-panel>
@@ -56,10 +56,10 @@
     <div fxLayout="row" class="margin-t" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
       <button mat-raised-button matStepperPrevious>
         <fa-icon icon="arrow-left"></fa-icon>&nbsp;&nbsp;
-        Previous
+        {{'Client_Component.ClientStepper.FamilyMember.buttonPrevious'|translate}}
       </button>
       <button mat-raised-button matStepperNext>
-        Next&nbsp;&nbsp;
+        {{'Client_Component.ClientStepper.FamilyMember.buttonNext'|translate}}&nbsp;&nbsp;
         <fa-icon icon="arrow-right"></fa-icon>
       </button>
     </div>
