--- a/src/app/clients/client-stepper/client-general-step/client-general-step.component.scss
+++ b/src/app/clients/client-stepper/client-general-step/client-general-step.component.scss
@@ -5,3 +5,32 @@
 .margin-t {
   margin-top: 2em;
 }
+
+.custom-files-input {
+  margin: 5px;
+  margin-top: 10px;
+  padding: 5px;
+}
+
+.toolbar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.toolbar ul li {
+  float: left;
+}
+
+.toolbar ul li img {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+.card-custom {
+  margin-top: 8px;
+}
