--- a/src/main.scss
+++ b/src/main.scss
@@ -5,6 +5,7 @@
 
 // Import Default Theme for MIDAS
 @import "theme/custom/denim-yellowgreen";
+// @import "theme/custom/pictonblue-yellowgreen.scss";
 
 // Global Imports
 /* You can add global styles to this file, and also import other style files */
